--- a/src/widgets/authorization/registration/forms/code-form/ui/styles.module.scss
+++ b/src/widgets/authorization/registration/forms/code-form/ui/styles.module.scss
@@ -72,6 +72,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+
+    &::placeholder {
+      opacity: 0.5;
+    }
   }
 
   small {
