fix: little fix

--- a/src/widgets/adminPanel/transactions/transactionsList/card/UI/styles.module.scss
+++ b/src/widgets/adminPanel/transactions/transactionsList/card/UI/styles.module.scss
@@ -46,7 +46,7 @@
         line-height: normal;
       }
 
-      &.complite {
+      &.complete {
         background: #f2fdf7;
         p {
           color: #7ce7ac;
