--- a/src/entities/admin/ui/complaintInfo/description/UI/styles.module.scss
+++ b/src/entities/admin/ui/complaintInfo/description/UI/styles.module.scss
@@ -192,7 +192,7 @@
             }
           }
 
-          &.complite {
+          &.complete {
             background: #f2fdf7;
             p {
               color: #7ce7ac;
