--- a/src/widgets/offer/myOffers/card/skeleton/styles.module.scss
+++ b/src/widgets/offer/myOffers/card/skeleton/styles.module.scss
@@ -90,10 +90,10 @@
 
   &__active,
   &__wait,
-  &__complite,
+  &__complete,
   &__cancel,
   &__moderation,
-  &__uncomplite,
+  &__uncomplete,
   &__check {
     padding: 0 20px;
 
@@ -152,7 +152,7 @@
     }
   }
 
-  &__complite {
+  &__complete {
     display: grid;
     align-items: center;
     align-content: center;
@@ -192,7 +192,7 @@
     }
   }
 
-  &__uncomplite {
+  &__uncomplete {
     display: grid;
     align-items: center;
     align-content: center;
