fix: design fixes

--- a/src/features/channel/addChannel/UI/styles.module.scss
+++ b/src/features/channel/addChannel/UI/styles.module.scss
@@ -1,7 +1,6 @@
 .button {
   padding: 10px 15px;
   p {
-    font-size: 10px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -11,6 +10,10 @@
     width: 24px;
     height: 24px;
     stroke: #fff;
+  }
+
+  &.orange {
+    background: var(--Gradients-Gradient-2) !important;
   }
 }
 
