--- a/src/features/mainPages/accommList/accommCard/UI/styles.module.scss
+++ b/src/features/mainPages/accommList/accommCard/UI/styles.module.scss
@@ -81,14 +81,14 @@
   }
 
   .bottom__row {
-    display: grid;
-    grid-template: 1fr / 1fr 1fr;
-    column-gap: 30px;
+    display: flex;
+    flex-direction: column-reverse;
+    row-gap: 20px;
 
     @media (max-width: 768px) {
       display: flex;
       flex-direction: column-reverse;
-      row-gap: 30px;
+      row-gap: 20px;
     }
 
     .save__row {
@@ -96,6 +96,8 @@
       grid-auto-flow: column;
       column-gap: 15px;
       align-items: center;
+      justify-content: center;
+      justify-items: center;
       text-align: left;
       font-size: 16px;
       font-style: normal;
