--- a/src/features/other/priceList/buyTarif/UI/styles.module.scss
+++ b/src/features/other/priceList/buyTarif/UI/styles.module.scss
@@ -65,7 +65,7 @@
   &__top {
     display: grid;
     align-content: center;
-    padding: 20px 50px;
+    padding: 20px;
     border-bottom: 1px solid var(--black-20, #ccc);
     height: var(--header-height-xl);
     position: relative;
@@ -88,7 +88,7 @@
     .close {
       position: absolute;
       top: 50%;
-      right: 15px;
+      right: 0px;
       transform: translateY(-50%);
 
       padding: 15px;
