--- a/src/widgets/channel/myChannels/activeChannels/card/UI/styles.module.scss
+++ b/src/widgets/channel/myChannels/activeChannels/card/UI/styles.module.scss
@@ -518,10 +518,7 @@
       box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.15);
       font-size: var(--font-size-option-item-xl);
       font-weight: 500;
-      background: var(--Gradients-Gradient-1);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
+      color: var(--Personal-colors-main);
       transition: all 300ms ease;
       padding: 12px 10px;
 
@@ -535,11 +532,19 @@
         font-size: 14px;
       }
 
+      svg {
+        stroke: var(--Personal-colors-main);
+      }
+
       &:hover {
         background: var(--Gradients-Gradient-1);
         color: #fff;
         transform: scale(1.015);
         transition: all 300ms ease;
+
+        svg {
+          stroke: #fff;
+        }
       }
 
       div {
