--- a/src/widgets/mainPages/howItWorks/UI/styles.module.scss
+++ b/src/widgets/mainPages/howItWorks/UI/styles.module.scss
@@ -86,11 +86,26 @@
         background-size: contain;
         background-repeat: no-repeat;
         position: absolute;
-        top: 53px;
+        top: 60px;
         left: 8%;
         width: calc(100% - 40px - 18%);
         height: 80%;
         overflow: hidden;
+      }
+
+      @media (max-width: 1200px) {
+        &::before {
+          content: "";
+          background-image: url("/images/assets/howItWorkLineXL.svg");
+          background-size: contain;
+          background-repeat: no-repeat;
+          position: absolute;
+          top: 70px;
+          left: 10%;
+          width: calc(100% - 24%);
+          height: 80%;
+          overflow: hidden;
+        }
       }
 
       @media (max-width: 992px) {
@@ -110,24 +125,10 @@
         font-size: 14px;
         font-style: normal;
         font-weight: 500;
-        line-height: 1;
+        line-height: 1.3;
         margin-top: 15px;
-
-        // position: absolute;
-
-        word-wrap: break-word; /* Перенос слов */
-        overflow-wrap: break-word; /* Современный аналог */
-        word-break: break-all;
-
-        // border: 1.5px dashed #FFF;
-        // position: absolute;
-        // transform: translate(-50%, 0%);
-        // border-radius: 20px;
-        // padding: 15px 20px;
-        // width: 700%;
-        // width: 250px;
-
         position: relative;
+
         &::before {
           content: "";
           position: absolute;
@@ -137,6 +138,10 @@
           height: calc(100% + 30px);
           border: 1.5px dashed #fff;
           border-radius: 20px;
+        }
+
+        @media (max-width: 1250px) {
+          font-size: 12px;
         }
       }
 
@@ -170,8 +175,6 @@
       @media (max-width: 992px) and (min-width: 768px) {
         display: grid;
         position: relative;
-        // grid-template: 1.5fr 3fr 4fr 5fr 5fr / 1fr;
-        // grid-template: 1fr 1.7fr 2fr 2.8fr 2.8fr / 1fr;
         grid-template: 1fr 1.7fr 2fr 3.7fr 1fr / 1fr;
         width: 695px;
       }
@@ -189,7 +192,7 @@
         font-size: 14px;
         font-style: normal;
         font-weight: 500;
-        line-height: 1;
+        line-height: 1.3;
         border: 1.5px dashed #fff;
         border-radius: 20px;
         padding: 15px 20px;
@@ -202,9 +205,9 @@
         background-repeat: no-repeat;
         position: absolute;
         top: 50px;
-        left: 23%;
-        width: 260px; /* Задайте нужную ширину */
-        height: 957px; /* Задайте нужную высоту */
+        left: 19%;
+        width: 300px;
+        height: 1030px;
       }
 
       &__row {
@@ -215,15 +218,15 @@
         }
 
         &.two {
-          grid-template: 1fr / 1fr 3.1fr;
+          grid-template: 1fr / 1fr 3.7fr;
         }
         &.three {
-          grid-template: 1fr / 2.1fr 1fr;
+          grid-template: 1fr / 2fr 1fr;
         }
 
         &.four {
           margin-bottom: 100px;
-          grid-template: 1fr / 1fr 6fr;
+          grid-template: 1fr / 1fr 8.5fr;
         }
         &.five {
           grid-template: 1fr / 2.1fr 1fr;
