--- a/src/widgets/offer/myOffers/card/UI/styles.module.scss
+++ b/src/widgets/offer/myOffers/card/UI/styles.module.scss
@@ -228,6 +228,11 @@
       display: grid;
       grid-template: repeat(2, 1fr) / 1fr;
       row-gap: 5px;
+
+      button {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 
@@ -431,6 +436,12 @@
 
     svg {
       width: 30px;
+    }
+
+    > div {
+      display: flex;
+      justify-content: center;
+      align-items: start;
     }
 
     @media (max-width: 768px) {
