--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -59,7 +59,7 @@
   --black-10: rgba(0, 0, 0, 0.1);
   --Orange: #ffa04f;
 
-  --Text-sample: #a3a0a0;
+  --Text-sample: #acaaaa;
   --Sub-text: #4d4d4d;
   --choosen-text: #808080;
   --Inside-container: #bdbdbd;
