--- a/src/features/createOrder/calendar/UI/styles.module.scss
+++ b/src/features/createOrder/calendar/UI/styles.module.scss
@@ -73,7 +73,7 @@
   grid-auto-flow: row;
   align-items: center;
   justify-content: center;
-  padding: 35px;
+  padding: 25px;
   border-radius: 25px;
   background: var(--Personal-colors-White);
 
@@ -109,7 +109,7 @@
         font-size: 16px;
       }
     }
-    Ц svg {
+    svg {
       width: 30px;
       height: 30px;
 
@@ -156,5 +156,5 @@
 .disabledDate {
   cursor: none;
   pointer-events: none;
-  color: var(--Text-sample);
+  color: var(--Text-sample) !important;
 }
