--- a/src/features/createOrder/calendar/UI/styles.scss
+++ b/src/features/createOrder/calendar/UI/styles.scss
@@ -113,10 +113,7 @@
   // }
 
   &__month-view__days__day--weekend {
-    background: var(--Gradients-Gradient-1);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
+    color: var(--Personal-colors-main);
     font-weight: 500;
     font-size: 14px;
   }
