feat: add AdminApi transactionInfo

--- a/src/widgets/adminPanel/transactions/transactionsList/card/UI/styles.module.scss
+++ b/src/widgets/adminPanel/transactions/transactionsList/card/UI/styles.module.scss
@@ -79,6 +79,22 @@
         border-radius: 10px;
         background: rgba(0, 0, 0, 0.03);
         padding: 8px;
+
+        .loader {
+          display: grid;
+          align-content: center;
+          justify-content: center;
+
+          span {
+            width: 15px;
+            height: 15px;
+
+            &::after {
+              width: 15px;
+              height: 15px;
+            }
+          }
+        }
       }
     }
   }
