--- a/src/pages/layouts/components/header/UI/dropdownMenu/UI/menuItem/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/dropdownMenu/UI/menuItem/styles.module.scss
@@ -155,6 +155,7 @@
       color: transparent;
       font-weight: 500;
       text-align: center;
+      line-height: normal;
 
       @media (max-width: 992px) {
         font-size: var(--font-size-text-accent-lg);
