--- a/src/widgets/createOrder/components/createOrderPost/UI/styles.module.scss
+++ b/src/widgets/createOrder/components/createOrderPost/UI/styles.module.scss
@@ -253,6 +253,7 @@
               /* Включаем поддержку для Firefox */
               background-clip: text;
               color: transparent;
+              line-height: normal;
             }
 
             .icon {
