--- a/src/widgets/createOrder/components/createOrderPost/multiPostsList/ui/styles.module.scss
+++ b/src/widgets/createOrder/components/createOrderPost/multiPostsList/ui/styles.module.scss
@@ -38,6 +38,7 @@
       font-weight: 500;
       margin-bottom: 20px;
       text-align: center;
+      line-height: normal;
 
       @media (max-width: 992px) {
         font-size: var(--column-gap-option-item-lg);
