--- a/src/widgets/createOrder/components/createOrderPost/tabs/postTypesTabs/ui/styles.module.scss
+++ b/src/widgets/createOrder/components/createOrderPost/tabs/postTypesTabs/ui/styles.module.scss
@@ -34,6 +34,7 @@
       /* Включаем поддержку для Firefox */
       background-clip: text;
       color: transparent;
+      line-height: normal;
 
       &::after {
         content: "";
@@ -53,6 +54,7 @@
       /* Включаем поддержку для Firefox */
       background-clip: text;
       color: transparent;
+      line-height: normal;
     }
   }
 }
