--- a/src/widgets/mainPages/turnkey/UI/styles.module.scss
+++ b/src/widgets/mainPages/turnkey/UI/styles.module.scss
@@ -124,6 +124,7 @@
           -webkit-text-fill-color: transparent;
           background-clip: text;
           font-size: var(--font-size-subtitle-secondary-sm);
+          line-height: normal;
         }
 
         @media (max-width: 375px) {
