--- a/src/features/communication/chat/chatCard/UI/styles.module.scss
+++ b/src/features/communication/chat/chatCard/UI/styles.module.scss
@@ -29,6 +29,7 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+      line-height: normal;
     }
     .date {
       p {
@@ -36,6 +37,7 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
+        line-height: normal;
       }
     }
 
