--- a/src/features/createOrder/calendar/UI/styles.module.scss
+++ b/src/features/createOrder/calendar/UI/styles.module.scss
@@ -34,6 +34,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
+    line-height: normal;
 
     @media (max-width: 768px) {
       font-size: 12px;
@@ -100,6 +101,7 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+      line-height: normal;
 
       @media (max-width: 992px) {
         font-size: 20px;
