--- a/src/features/createOrder/calendar/UI/styles.scss
+++ b/src/features/createOrder/calendar/UI/styles.scss
@@ -74,6 +74,7 @@
       -webkit-text-fill-color: transparent;
       background-clip: text;
       color: transparent;
+      line-height: normal;
 
       abbr {
         color: white;
