--- a/src/features/createOrder/postButtons/UI/styles.module.scss
+++ b/src/features/createOrder/postButtons/UI/styles.module.scss
@@ -78,6 +78,7 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+      line-height: normal;
 
       @media (max-width: 768px) {
         font-size: 20px;
@@ -200,6 +201,7 @@
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
           background-clip: text;
+          line-height: normal;
         }
       }
 
