--- a/src/features/createOrder/postFiles/UI/styles.module.scss
+++ b/src/features/createOrder/postFiles/UI/styles.module.scss
@@ -77,6 +77,7 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+      line-height: normal;
 
       @media (max-width: 768px) {
         font-size: 20px;
