--- a/src/features/createOrder/timeList/UI/styles.module.scss
+++ b/src/features/createOrder/timeList/UI/styles.module.scss
@@ -93,6 +93,7 @@
       -webkit-text-fill-color: transparent;
       background-clip: text;
       color: transparent;
+      line-height: normal;
 
       @media (max-width: 992px) {
         font-size: 20px;
@@ -153,6 +154,7 @@
           background-clip: text;
           color: transparent;
           white-space: nowrap;
+          line-height: normal;
         }
 
         &.active {
