--- a/src/features/other/barSubfilter/UI/styles.module.scss
+++ b/src/features/other/barSubfilter/UI/styles.module.scss
@@ -102,6 +102,7 @@
       flex: 1; /* Равномерно распределить пространство между элементами */
       white-space: nowrap;
       position: relative;
+      line-height: normal;
 
       @media (max-width: 576px) {
         padding: 15px 10px;
