--- a/src/features/other/barTypesFilter/UI/styles.module.scss
+++ b/src/features/other/barTypesFilter/UI/styles.module.scss
@@ -45,6 +45,7 @@
       -webkit-text-fill-color: transparent;
       background-clip: text;
       color: transparent;
+      line-height: normal;
 
       &::after {
         content: "";
