--- a/src/features/project/technicalSpecification/UI/styles.module.scss
+++ b/src/features/project/technicalSpecification/UI/styles.module.scss
@@ -22,11 +22,11 @@
       font-size: 14px !important;
       font-style: normal !important;
       font-weight: 500 !important;
-      line-height: 1;
       background: var(--Gradients-Gradient-1);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+      line-height: normal;
     }
   }
 }
@@ -53,11 +53,11 @@
       font-size: 20px;
       font-style: normal;
       font-weight: 600;
-      line-height: 1;
       background: var(--Gradients-Gradient-1);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+      line-height: normal;
     }
     .close {
       display: grid;
@@ -185,7 +185,7 @@
               font-size: 12px;
               font-style: normal;
               font-weight: 500;
-              line-height: 1;
+              line-height: normal;
             }
           }
 
