--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -702,4 +702,5 @@ main {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+  line-height: normal;
 }
