--- a/src/shared/ui/themeChanger/styles.module.scss
+++ b/src/shared/ui/themeChanger/styles.module.scss
@@ -87,6 +87,7 @@
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
           background-clip: text;
+          line-height: normal;
         }
         border: 1px solid var(--Personal-colors-main);
         background: var(--Personal-colors-White);
