--- a/src/widgets/cart/components/recommendationList/UI/styles.module.scss
+++ b/src/widgets/cart/components/recommendationList/UI/styles.module.scss
@@ -44,6 +44,7 @@
     align-items: center;
     gap: 5px;
     height: 100%;
+    cursor: pointer;
 
     @media (max-width: 576px) {
       font-size: var(--font-size-sm-button-text);
