--- a/src/widgets/catalog/components/catalogList/parametersFilter/UI/styles.module.scss
+++ b/src/widgets/catalog/components/catalogList/parametersFilter/UI/styles.module.scss
@@ -29,6 +29,10 @@
     &:hover {
       background-color: rgba(0, 0, 0, 0.1);
     }
+
+    @media (max-width: 576px) {
+      padding: 5px;
+    }
   }
 }
 
