--- a/src/widgets/channel/addChannel/UI/channelAccept/UI/styles.module.scss
+++ b/src/widgets/channel/addChannel/UI/channelAccept/UI/styles.module.scss
@@ -85,6 +85,7 @@
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
           background-clip: text;
+          line-height: normal;
         }
 
         @media (max-width: 576px) {
