--- a/src/widgets/channel/addChannel/UI/channelTop/UI/styles.module.scss
+++ b/src/widgets/channel/addChannel/UI/channelTop/UI/styles.module.scss
@@ -161,6 +161,7 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
+      line-height: normal;
     }
   }
 
