--- a/src/widgets/createOrder/components/createOrderPost/tabs/platformFilter/UI/styles.module.scss
+++ b/src/widgets/createOrder/components/createOrderPost/tabs/platformFilter/UI/styles.module.scss
@@ -100,6 +100,7 @@
     /* Включаем поддержку для Firefox */
     background-clip: text;
     color: transparent;
+    line-height: normal;
   }
 }
 
