--- a/src/widgets/profile/settingsProfile/UI/styles.module.scss
+++ b/src/widgets/profile/settingsProfile/UI/styles.module.scss
@@ -44,6 +44,7 @@
     text-align: center;
     padding-bottom: 20px;
     border-bottom: 1px solid var(--Personal-colors-main);
+    line-height: normal;
 
     font-size: var(--font-size-title-main-xl);
 
