feat: add Admin ban / unban channel, choose / make decision complaint

--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -48,6 +48,7 @@
   --Personal-colors-main2: #8e54e9;
   --Personal-colors-White: #fff;
   --Personal-colors-Green: #48d23c;
+  --Personal-colors-Grey: #00000033;
 
   --Personal-colors-Orange-light: #f06547;
   --Personal-colors-Green-light: #0ab39c;
