--- a/src/widgets/adminPanel/complaints/complaintsList/UI/styles.module.scss
+++ b/src/widgets/adminPanel/complaints/complaintsList/UI/styles.module.scss
@@ -4,12 +4,22 @@
 
   .bar {
     display: grid;
-    grid-template-columns: 2fr repeat(3, 1fr) 1.5fr;
     column-gap: 20px;
     padding: 15px 20px;
     min-height: 70px;
     background: var(--color-whites-White, #fff);
     box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
+
+    &.wait {
+      grid-template-columns: 2fr repeat(3, 1fr) 2fr;
+    }
+    &.active {
+      grid-template-columns: 2fr repeat(3, 1fr) 2fr;
+    }
+
+    &.completed {
+      grid-template-columns: 2fr repeat(4, 1fr) 2fr;
+    }
 
     .column {
       display: grid;
