--- a/src/widgets/adminPanel/complaints/complaintsList/card/UI/styles.module.scss
+++ b/src/widgets/adminPanel/complaints/complaintsList/card/UI/styles.module.scss
@@ -1,11 +1,21 @@
 .wrapper {
   display: grid;
-  grid-template-columns: 2fr repeat(3, 1fr) 1.5fr;
   background: var(--Personal-colors-White, #fff);
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
   padding: 15px 20px;
   column-gap: 20px;
   min-height: 70px;
+
+  &.wait {
+    grid-template-columns: 2fr repeat(3, 1fr) 2fr;
+  }
+  &.active {
+    grid-template-columns: 2fr repeat(3, 1fr) 2fr;
+  }
+
+  &.completed {
+    grid-template-columns: 2fr repeat(4, 1fr) 2fr;
+  }
 
   .column {
     display: grid;
