--- a/src/pages/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
@@ -145,7 +145,8 @@
       grid-auto-flow: column;
       justify-content: space-between;
       align-items: center;
-      background: #fff;
+      background: transparent;
+      backdrop-filter: blur(20px);
 
       height: var(--header-height-xl);
 
@@ -163,18 +164,18 @@
 
       .logo {
         color: rgba(0, 0, 0, 0.3);
-        font-size: 44px;
+        font-size: 34px;
         font-style: normal;
         font-weight: 600;
         line-height: normal;
         cursor: pointer;
 
         @media (max-width: 768px) {
-          font-size: 24px;
+          font-size: 20px;
         }
 
         @media (max-width: 375px) {
-          font-size: 20px;
+          font-size: 16px;
         }
       }
 
@@ -200,9 +201,9 @@
   align-items: center;
 
   @media (max-width: 768px) {
-    --width: 24px;
-    --height: 24px;
-    --line-height: 1.25px;
+    --width: 20px;
+    --height: 20px;
+    --line-height: 1px;
   }
 }
 
