--- a/src/widgets/adminPanel/channels/channelsList/card/UI/styles.module.scss
+++ b/src/widgets/adminPanel/channels/channelsList/card/UI/styles.module.scss
@@ -216,7 +216,8 @@
         grid-column: span 1; // Занимают по одному столбцу
       }
 
-      .block:nth-child(5) {
+      .block:nth-child(5),
+      .block:nth-child(6) {
         grid-column: span 2; // Занимает два столбца
       }
 
