--- a/src/widgets/profile/settingsProfile/UI/styles.module.scss
+++ b/src/widgets/profile/settingsProfile/UI/styles.module.scss
@@ -178,6 +178,7 @@
             font-style: normal;
             font-weight: 400;
             line-height: 1;
+            cursor: pointer;
 
             &::placeholder {
               color: #a3a0a0;
@@ -280,6 +281,7 @@
                   font-style: normal;
                   font-weight: 400;
                   line-height: 1;
+                  cursor: pointer;
 
                   &::placeholder {
                     color: #a3a0a0;
@@ -325,6 +327,7 @@
               input {
                 width: 20px;
                 height: 20px;
+                cursor: pointer;
               }
             }
           }
