--- a/src/pages/layouts/components/header/UI/dropdownMenu/UI/menuItem/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/dropdownMenu/UI/menuItem/styles.module.scss
@@ -87,7 +87,7 @@
   padding: 5px;
   background: red;
   min-width: 20px;
-  min-height: 20px;
+  height: 20px;
   border-radius: 10px;
   top: -5px;
   left: -5px;
@@ -98,7 +98,7 @@
     font-size: 10px;
     font-style: normal;
     font-weight: 600;
-    line-height: 0.75;
+    line-height: normal;
   }
 }
 
