feat: download & copy posts

--- a/src/features/createOrder/addMediaFiles/UI/styles.module.scss
+++ b/src/features/createOrder/addMediaFiles/UI/styles.module.scss
@@ -87,6 +87,7 @@
       row-gap: 15px;
       align-content: center;
       justify-content: center;
+      justify-items: center;
 
       .logo {
         display: grid;
@@ -138,6 +139,10 @@
         text-align: center;
         border-radius: 8px;
         background: var(--Gradients-Gradient-1);
+
+        @media (min-width: 767px) {
+          width: 200px;
+        }
 
         span {
           color: var(--Personal-colors-White);
