--- a/src/entities/platform/ui/utils/copyTextBtn/styles.module.scss
+++ b/src/entities/platform/ui/utils/copyTextBtn/styles.module.scss
@@ -4,7 +4,7 @@
 
   display: grid;
   grid-auto-flow: column;
-  gap: 10px;
+  gap: 5px;
   justify-content: center;
   align-items: center;
   cursor: pointer;
@@ -12,8 +12,8 @@
   background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(20px);
   border-radius: 999px;
-  padding: 15px 5px;
-  margin: 20px 4% 0px 4%;
+  padding: 12px 6px;
+  margin-left: 8px;
 
   transition: all 300ms ease;
 
@@ -29,26 +29,22 @@
   }
 
   @media (max-width: 992px) {
-    padding: 12px 5px;
+    padding: 10px 4px;
   }
 
   @media (max-width: 768px) {
-    padding: 10px 5px;
+    padding: 8px 4px;
   }
 
   &__title {
     color: #2d2d2d;
-    font-size: 12px;
+    font-size: 10px;
     font-weight: 600;
     text-align: center;
     line-height: 1;
     text-transform: uppercase;
 
     @media (max-width: 992px) {
-      font-size: 10px;
-    }
-
-    @media (max-width: 768px) {
       font-size: 8px;
     }
   }
