--- a/src/pages/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
@@ -18,7 +18,7 @@
       grid-template-rows: repeat(2, min-content);
       grid-template-columns: 1fr;
       height: calc(var(--vh) * 100);
-      background: rgba(255, 255, 255, 0.6);
+      background: rgba(255, 255, 255, 0.7);
       z-index: 999;
       width: 100vw;
       transform: translate(calc(var(--left-padding-header) * (-1)), -1rem);
@@ -27,6 +27,16 @@
         width: 100%;
         transform: translate(0, 0);
         background: rgba(255, 255, 255, 0.7);
+      }
+
+      &.safari {
+        transform: translate(0, -1rem);
+
+        @media (max-width: 768px) {
+          width: 100%;
+          transform: translate(0, 0);
+          background: rgba(255, 255, 255, 0.7);
+        }
       }
     }
 
@@ -145,7 +155,7 @@
       grid-auto-flow: column;
       justify-content: space-between;
       align-items: center;
-      background: transparent;
+      background: rgba(255, 255, 255, 0.7);
       backdrop-filter: blur(20px);
 
       height: var(--header-height-xl);
@@ -190,7 +200,6 @@
   --width: 32px;
   --height: 32px;
   --line-height: 1.25px;
-  // --color: var(--Gradients-1);;
   --color: var(--Personal-colors-black);
   cursor: pointer;
   height: var(--height);
@@ -205,33 +214,33 @@
     --height: 20px;
     --line-height: 1px;
   }
-}
 
-.burger__icon {
-  position: relative;
-  width: var(--width);
-  height: var(--line-height);
-  background-color: var(--color);
-  border-radius: 5px;
-
-  &::before,
-  &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    left: 0;
+  .burger__icon {
+    position: relative;
     width: var(--width);
     height: var(--line-height);
     background-color: var(--color);
     border-radius: 5px;
-  }
 
-  &::before {
-    top: calc(var(--line-height) * -6);
-  }
+    &::before,
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      left: 0;
+      width: var(--width);
+      height: var(--line-height);
+      background-color: var(--color);
+      border-radius: 5px;
+    }
 
-  &::after {
-    top: calc(var(--line-height) * 6);
+    &::before {
+      top: calc(var(--line-height) * -6);
+    }
+
+    &::after {
+      top: calc(var(--line-height) * 6);
+    }
   }
 }
 
