--- a/src/shared/ui/suspenseLoader/styles.module.scss
+++ b/src/shared/ui/suspenseLoader/styles.module.scss
@@ -1,4 +1,8 @@
 .wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
   display: grid;
   grid-auto-flow: row;
   gap: 10px;
@@ -7,9 +11,10 @@
   align-items: center;
   align-content: center;
   width: 100%;
-  height: 90dvh;
-  z-index: 999;
-  backdrop-filter: blur(50px);
+  width: 100vw;
+  height: 100dvh;
+  backdrop-filter: blur(30px);
+  background: rgba(255, 255, 255, 0.95);
 
   .text {
     width: fit-content;
@@ -33,6 +38,7 @@
     @media (max-width: 576px) {
       font-size: 26px;
       font-weight: 600;
+      -webkit-text-stroke: 0.25px rgba(0, 0, 0, 0.3);
     }
   }
 
