--- a/src/pages/layouts/components/footer/UI/styles.module.scss
+++ b/src/pages/layouts/components/footer/UI/styles.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
 
   &.create_order_bg {
-    background: var(--Gradients-Gradient-9);
+    // background: var(--Gradients-Gradient-9);
   }
 
   > section {
