--- a/src/features/other/partnerList/UI/styles.module.scss
+++ b/src/features/other/partnerList/UI/styles.module.scss
@@ -18,16 +18,21 @@
 }
 
 .image {
-  width: 100%;
-  height: 100%;
+  width: 160px;
+  height: 160px;
 
-  @media (max-width: 768px) {
-    width: 75%;
-    height: 75%;
+  img {
+    width: 100%;
+    height: 100%;
   }
 
-  @media (max-width: 375px) {
-    width: 50%;
-    height: 50%;
+  @media (max-width: 768px) {
+    width: 120px;
+    height: 120px;
+  }
+
+  @media (max-width: 576px) {
+    width: 100px;
+    height: 100px;
   }
 }
