fix: add cursor pointer on notification card and scrollarea in chat cards

--- a/src/widgets/communication/notifications/UI/styles.module.scss
+++ b/src/widgets/communication/notifications/UI/styles.module.scss
@@ -67,6 +67,7 @@
       top: 50%;
       left: 5px;
       transform: translateY(-50%) rotate(90deg);
+      cursor: pointer;
 
       padding: 15px;
       border-radius: 50%;
