--- a/src/features/communication/notification/notificationCard/UI/styles.module.scss
+++ b/src/features/communication/notification/notificationCard/UI/styles.module.scss
@@ -5,6 +5,7 @@
   padding: 10px;
   box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.16);
   border-radius: 10px;
+  cursor: pointer;
 
   &:hover {
     background: #f0f4f8;
