--- a/src/features/createOrder/postButtons/UI/styles.module.scss
+++ b/src/features/createOrder/postButtons/UI/styles.module.scss
@@ -69,7 +69,7 @@
     align-items: center;
     justify-content: space-between;
 
-    p {
+    .title {
       font-size: 24px;
       font-style: normal;
       font-weight: 500;
