--- a/src/features/createOrder/timeList/UI/styles.module.scss
+++ b/src/features/createOrder/timeList/UI/styles.module.scss
@@ -83,7 +83,7 @@
       margin-bottom: 10px;
     }
 
-    p {
+    .title {
       font-size: 24px;
       font-style: normal;
       font-weight: 500;
