--- a/src/features/project/technicalSpecification/UI/styles.module.scss
+++ b/src/features/project/technicalSpecification/UI/styles.module.scss
@@ -49,7 +49,7 @@
     padding: 20px 25px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 
-    p {
+    .title {
       font-size: 20px;
       font-style: normal;
       font-weight: 600;
