--- a/src/features/wallet/legalForm/UI/styles.module.scss
+++ b/src/features/wallet/legalForm/UI/styles.module.scss
@@ -22,6 +22,14 @@
   }
 }
 
+.error_text {
+  position: absolute;
+  bottom: -20px;
+  left: 10px;
+  color: red;
+  font-size: 12px;
+}
+
 .parameters {
   display: grid;
   grid-auto-flow: row;
@@ -75,6 +83,7 @@
 
 .right {
   width: 100%;
+  position: relative;
 
   .input {
     width: 100%;
@@ -104,9 +113,9 @@
     border: 1px solid red;
     animation: shake 0.3s ease-in-out;
 
-    &::placeholder {
-      color: red;
-    }
+    // &::placeholder {
+    //   color: red;
+    // }
   }
 }
 
