--- a/src/widgets/wallet/transactions/components/paymentData/UI/styles.module.scss
+++ b/src/widgets/wallet/transactions/components/paymentData/UI/styles.module.scss
@@ -29,6 +29,14 @@
   row-gap: 40px;
 }
 
+.error_text {
+  position: absolute;
+  bottom: -20px;
+  left: 10px;
+  color: red;
+  font-size: 12px;
+}
+
 .ammount {
   display: grid;
   grid-auto-flow: row;
@@ -51,9 +59,38 @@
     }
   }
 
-  .error {
-    &::placeholder {
-      color: red;
+  .amount__wrapper {
+    width: 100%;
+    position: relative;
+
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    transition: border-color 0.5s;
+    display: grid;
+    align-items: center;
+    grid-template: 1fr / 1fr min-content;
+    gap: 10px;
+
+    .input {
+      width: 100%;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+
+      @media (max-width: 992px) {
+        font-size: 16px;
+      }
+
+      &::placeholder {
+        color: rgba(0, 0, 0, 0.3);
+      }
+    }
+
+    &.error {
+      border: 1px solid red;
+      animation: shake 0.3s ease-in-out;
     }
   }
 
@@ -65,6 +102,7 @@
     line-height: 1;
     margin-bottom: 10px;
   }
+
   span {
     color: #ccc;
     font-size: 12px;
@@ -72,33 +110,27 @@
     font-weight: 400;
     line-height: 1;
   }
+}
 
-  div {
-    display: grid;
-    align-items: center;
-    grid-template: 1fr / 1fr minmax(20px, 30px);
-    gap: 10px;
-    border-radius: 10px;
-    padding: 10px 20px;
-    border: 1px solid #ccc;
-    background: var(--Personal-colors-White);
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
 
-    @media (max-width: 992px) {
-      font-size: 16px;
-    }
+  25% {
+    transform: translateX(-5px);
+  }
 
-    // @media (max-width: 576px) {
-    //   font-size: 12px;
-    // }
-    input {
-      &::placeholder {
-        color: rgba(0, 0, 0, 0.3);
-      }
-    }
+  50% {
+    transform: translateX(5px);
+  }
+
+  75% {
+    transform: translateX(-5px);
+  }
+
+  100% {
+    transform: translateX(0);
   }
 }
 
