--- a/src/features/mainPages/accommList/accommCard/UI/styles.module.scss
+++ b/src/features/mainPages/accommList/accommCard/UI/styles.module.scss
@@ -71,7 +71,7 @@
       }
 
       @media (max-width: 576px) {
-        font-size: var(--font-size-subtitle-secondary-sm);
+        font-size: 16px;
       }
 
       @media (max-width: 380px) {
