--- a/src/widgets/wallet/transactions/topup/UI/creditCard/UI/styles.module.scss
+++ b/src/widgets/wallet/transactions/topup/UI/creditCard/UI/styles.module.scss
@@ -50,6 +50,7 @@
         font-style: normal;
         font-weight: 600;
         line-height: 1;
+
         @media (max-width: 576px) {
           text-align: center;
         }
@@ -62,17 +63,37 @@
 
         .payment_item {
           height: 96px;
-          border: 0.5px solid rgba(0, 0, 0, 0.25);
+          box-shadow: inset 0px 0px 3px 1px rgba(0, 0, 0, 0.25);
           border-radius: 12px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          @media (max-width: 576px) {
+            height: 76px;
+          }
 
           &:hover {
-            border: 1px solid var(--Personal-colors-main);
+            box-shadow: 0px 0px 3px 1px rgba(71, 114, 230, 1);
+          }
+
+          img {
+            width: 50%;
+            height: 50%;
           }
         }
 
         .active__payment {
           border-radius: 12px;
-          border: 2px solid #4772e6;
+          box-shadow: inset 0px 0px 3px 1px rgba(71, 114, 230, 1);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          img {
+            width: 50%;
+            height: 50%;
+          }
         }
       }
     }
@@ -88,6 +109,7 @@
         font-style: normal;
         font-weight: 600;
         line-height: 1;
+
         @media (max-width: 576px) {
           text-align: center;
         }
@@ -197,11 +219,14 @@
         font-weight: 600;
         line-height: 1;
       }
+
       @media (max-width: 576px) {
         row-gap: 10px;
+
         p {
           font-size: 18px;
         }
+
         span {
           font-size: 22px;
         }
