--- a/src/features/order/rejectPost/UI/styles.module.scss
+++ b/src/features/order/rejectPost/UI/styles.module.scss
@@ -2,11 +2,11 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
-  font-weight: 500;
+  font-weight: 600;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 14px;
+  font-size: 12px;
 
   color: var(--Personal-colors-main);
   border-radius: 8px;
@@ -36,6 +36,7 @@
   height: 100%;
   width: 100%;
   padding: 30px;
+  padding-top: 15px;
 }
 
 .description {
