--- a/src/widgets/communication/chat/UI/styles.module.scss
+++ b/src/widgets/communication/chat/UI/styles.module.scss
@@ -76,6 +76,10 @@
         line-height: 1;
         font-weight: 600;
 
+        @media (max-width: 576px) {
+          font-size: 18px;
+        }
+
         @media (max-width: 768px) {
           text-align: center;
         }
