--- a/src/widgets/communication/notifications/UI/styles.module.scss
+++ b/src/widgets/communication/notifications/UI/styles.module.scss
@@ -47,6 +47,10 @@
       @media (max-width: 768px) {
         text-align: center;
       }
+
+      @media (max-width: 576px) {
+        font-size: 18px;
+      }
     }
 
     .close {
