feat: adding back universal post data in CreatePost Widget and little refactor

--- a/src/features/createOrder/addFiles/UI/styles.module.scss
+++ b/src/features/createOrder/addFiles/UI/styles.module.scss
@@ -30,6 +30,7 @@
     justify-content: start;
     border-radius: 12px;
     border: 1px dashed var(--Containers);
+    min-height: 100px;
 
     @media (max-width: 768px) {
       grid-template: none;
