--- a/src/features/order/changeChannel/UI/styles.module.scss
+++ b/src/features/order/changeChannel/UI/styles.module.scss
@@ -15,7 +15,7 @@
   width: 50vw;
   max-width: 800px;
   padding: 40px;
-  position: relative;
+  // position: relative;
 
   .title {
     display: grid;
