--- a/src/features/order/changePost/ui/styles.module.scss
+++ b/src/features/order/changePost/ui/styles.module.scss
@@ -15,7 +15,7 @@
   width: 50vw;
   max-width: 800px;
   padding: 40px;
-  position: relative;
+  // position: relative;
 
   .title {
     display: grid;
@@ -30,12 +30,6 @@
       font-style: normal;
       font-weight: 600;
       line-height: normal;
-
-      // @media (max-width: 576px) {
-      //   font-size: 20px;
-      //   text-align: center;
-      //   font-weight: 600;
-      // }
     }
 
     .close {
