--- a/src/features/createOrder/postFiles/UI/styles.module.scss
+++ b/src/features/createOrder/postFiles/UI/styles.module.scss
@@ -45,6 +45,8 @@
   row-gap: 25px;
   padding: 35px;
   border-radius: 25px;
+  width: 80vw;
+  max-width: 800px;
 
   @media (max-width: 992px) {
     row-gap: 20px;
@@ -56,11 +58,13 @@
     row-gap: 15px;
     border-radius: 15px;
     padding: 20px;
+    width: 90vw;
   }
 
   @media (max-width: 576px) {
     border-radius: 12px;
     padding: 15px;
+    width: 95vw;
   }
 
   .top {
