--- a/src/features/createOrder/timeList/UI/styles.module.scss
+++ b/src/features/createOrder/timeList/UI/styles.module.scss
@@ -59,10 +59,12 @@
   align-items: center;
   justify-content: stretch;
   grid-auto-flow: row;
-  position: relative;
   padding: 35px;
   border-radius: 25px;
   background: #fff;
+  row-gap: 25px;
+  width: 90%;
+  max-width: 600px;
 
   @media (max-width: 768px) {
     padding: 20px;
@@ -77,7 +79,6 @@
     grid-auto-flow: column;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 25px;
 
     @media (max-width: 576px) {
       margin-bottom: 10px;
