fix: some fixes

--- a/src/features/channel/recommendCard/UI/styles.module.scss
+++ b/src/features/channel/recommendCard/UI/styles.module.scss
@@ -13,6 +13,7 @@
     display: grid;
     grid-auto-flow: row;
     padding: 15px;
+    padding-bottom: 0px;
     row-gap: 20px;
 
     .description {
