--- a/src/features/communication/chat/chatMessages/UI/styles.module.scss
+++ b/src/features/communication/chat/chatMessages/UI/styles.module.scss
@@ -260,15 +260,11 @@
 
   .input {
     padding: 8px 16px;
-    align-items: center;
-    justify-content: stretch;
     border-radius: 10px;
     background: var(--Blue-Grey-Blue-Grey-050, #f0f4f8);
     width: 100%;
     height: 100%;
     position: relative;
-
-    font-family: Montserrat;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
@@ -277,6 +273,7 @@
       width: inherit;
       word-break: break-all;
       outline: none;
+      
       p {
         font-size: 16px;
         font-style: normal;
@@ -300,10 +297,11 @@
 
     span {
       position: absolute;
-      pointer-events: none;
-      top: 8px;
+      top: 50%;
+      transform: translateY(-50%);
       left: 20px;
       color: #999;
+      font-size: 12px;
     }
   }
 }
