--- a/src/entities/platform/ui/displays/displayTelegram/UI/file/ui/styles.module.scss
+++ b/src/entities/platform/ui/displays/displayTelegram/UI/file/ui/styles.module.scss
@@ -17,22 +17,29 @@
   }
 
   .content {
-    display: flex;
-    flex-wrap: nowrap;
+    display: grid;
+    grid-template: 1fr / auto 1fr;
     align-items: center;
     color: #dddddd;
     background: rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     padding: 5px;
+    width: 100%;
 
-    svg {
+    div {
+      width: 14px;
+      height: 14px;
       margin-right: 5px;
-      width: 20px;
-      height: 20px;
-      stroke-width: 1px;
+
+      svg {
+        width: 14px;
+        height: 14px;
+        stroke-width: 1px;
+      }
     }
 
     &__name {
+      line-clamp: 1;
     }
   }
 }
