--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -708,3 +708,35 @@ main {
   background-clip: text;
   line-height: normal;
 }
+
+.form_error {
+  .input_error {
+    border: 1px solid red !important;
+    animation: shake 0.3s ease-in-out;
+  }
+
+  color: red !important;
+  animation: shake 0.3s ease-in-out;
+
+  @keyframes shake {
+    0% {
+      transform: translateX(0);
+    }
+
+    25% {
+      transform: translateX(-5px);
+    }
+
+    50% {
+      transform: translateX(5px);
+    }
+
+    75% {
+      transform: translateX(-5px);
+    }
+
+    100% {
+      transform: translateX(0);
+    }
+  }
+}
