--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -744,3 +744,19 @@ main {
     }
   }
 }
+
+.loader {
+  display: grid;
+  align-content: center;
+  justify-content: center;
+
+  span {
+    width: 15px;
+    height: 15px;
+
+    &::after {
+      width: 15px;
+      height: 15px;
+    }
+  }
+}
