--- a/src/features/order/changePost/ui/styles.module.scss
+++ b/src/features/order/changePost/ui/styles.module.scss
@@ -14,18 +14,14 @@
   height: 50vh;
   width: 50vw;
   max-width: 800px;
+  max-height: 400px;
   padding: 40px;
-  // position: relative;
 
   .title {
     display: grid;
     grid-auto-flow: column;
 
     p {
-      background: var(--Gradients-Gradient-1);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
       font-size: 24px;
       font-style: normal;
       font-weight: 600;
@@ -46,8 +42,12 @@
     }
   }
 
-  .text {
+  .textarea {
     resize: none;
     outline: none;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
   }
 }
