--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -6,9 +6,9 @@
   --Subtitle-text: #666;
   --secondary-text: #606060;
   --sticky-blog-top: 50px;
-
   --left-padding-header: 2.5vw;
 
+  // Gradients
   --Gradients-Gradient-1: linear-gradient(
     45deg,
     #4772e6 23.91%,
@@ -42,7 +42,7 @@
     rgba(71, 114, 230, 0.8) 23.91%,
     rgba(142, 84, 233, 0.8) 75.06%
   );
-
+  // Colors
   --Personal-colors-black: #000;
   --Personal-colors-main: #4772e6;
   --Personal-colors-main2: #8e54e9;
@@ -70,6 +70,9 @@
 
   --URL: #4d94ff;
 
+  --color-sex-man: #61a5f5;
+  --color-sex-woman: #ff95e1;
+  // etc
   --woman: 50;
   --man: 50%;
 
